<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wiknotDarkBlue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:background="@color/colorTransparent"
        android:onClick="backArrowPreferences"
        android:alpha="0.7"
        android:src="@drawable/arrow_left_wite" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preferences"
        android:text="@string/preferences"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textColor="@color/colorWite"
        android:textSize="20sp">
    </TextView>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wiknotLightBlue">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/screen_orientation"
                android:text="@string/screen_orientation"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWite">
            </TextView>

            <Spinner
                android:id="@+id/orientation_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logcat_dump"
                android:text="@string/logcat_dump"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWite">
            </TextView>

            <Spinner
                android:id="@+id/logcatdump_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notification_sound"
                android:text="@string/notification_sound"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWite">
            </TextView>

            <Spinner
                android:id="@+id/notification_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </LinearLayout>


    </ScrollView>
</LinearLayout>