<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wiknotDarkBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/userBtnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:background="@color/colorTransparent"
            android:onClick="backArrowMyProfile"
            android:alpha="0.7"
            android:src="@drawable/arrow_left_wite" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/colorWite"
            android:textSize="20sp">

        </TextView>

        <ImageButton
            android:id="@+id/photo_r"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:visibility="invisible"
            android:background="@drawable/nophoto" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:src="@drawable/menu_white">

            </ImageView>

            <TextView
                android:id="@+id/myNameBar"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/wiknotDarkBlue"
                android:padding="5dp"
                android:text=""
                android:textColor="@color/colorWite"
                android:textSize="12sp" />






            <TextView
                android:id="@+id/userMoreInfo"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_gravity="top"
                android:layout_weight="4"
                android:background="@color/wiknotDarkBlue"
                android:gravity="top"
                android:hint="@string/more_info"
                android:paddingTop="15dp"
                android:textAlignment="center"
                android:textColor="@color/colorWite" />

            <TextView
                android:id="@+id/personalChatTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="4"
                android:background="@color/wiknotLightBlue"
                android:gravity="center_horizontal"
                android:hint="@string/chat"
                android:paddingTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/colorWite" />


            <ListView
                android:id="@+id/personalmsgview"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/wiknotLightBlue"
                android:divider="@null"
                android:stackFromBottom="true"
                android:transcriptMode="alwaysScroll"
                android:cacheColorHint="#00000000">

            </ListView>






        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="36dp"
        android:weightSum="5">

        <EditText
            android:id="@+id/msgFromPersonalChat"
            android:textColor="@color/colorWite"
            android:textColorHint="@color/colorGray"
            android:hint="@string/send_message"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:layout_marginLeft="10dp"

            />



        <ImageButton
            android:id="@+id/sendFromPersonalChat"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:adjustViewBounds="true"

            android:alpha="0.95"
            android:background="@color/colorTransparent"
            android:onClick="udpSendFromPersonalChat"

            android:scaleType="fitCenter"
            android:src="@drawable/send_wite" />

    </LinearLayout>

</LinearLayout>